Fix email not showing on different size screens.

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-9 col-sm-10 col-lg-8 col-12 offset-sm-1 offset-md-1 offset-lg-2">
-					<h1 class="mb-4 mt-2 text-center">Home</h1>
+					<h1 class="mb-4 mt-0 text-center">Home</h1>
 
-					<p class="para">
+					<p class="para para-home">
 						I am a qualified and experienced Japanese Language Tutor. </br>
 						Some of the textbooks used for teaching are <em>Minna no Nihongo, Genki</em> and <em>Japanese
 							for
@@ -98,7 +98,7 @@
 								class="rounded img-fluid float-right mt-5 mr-4 hide-412" alt=" Japanese teapot"
 								data-placement="left" data-toggle="tooltip" title="Japanese teapot">
 						</span><br>
-						<span class="text-info  "><em><b>Lessons from £20/hour</b></em></span>
+						<span class="text-info  "><em><b>Lessons from £22/hour</b></em></span>
 					</p>
 				</div>
 			</div>
