--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-md-9 col-xl-6  offset-md-1 offset-xl-3 mb-md-5">
-				<h1 class="text-center mb-4 mt-5">Contact</h1>
+				<h1 class="text-center mb-4 mt-4">Contact</h1>
 
 				<p class='para contact'>Please
 					send your full name, level of your
@@ -68,7 +68,7 @@
 					you wish to enroll
 					for lessons.
 				</p>
-				<p class="mt-lg-2 mb-lg-5">
+				<p class="mt-lg-2 mb-lg-5 m-b">
 					<span><img src=" images/email_1.png" width=25px class="mr-1 ml-0"></span>
 					<em class="hdg-colour">japaneselessons4u@gmail.com</em>
 				</p>
