Added new file about.html.
Fixed carousel and hero images to better  fit small screens.

--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,9 @@
 						<li class=" nav-item">
 							<a class="nav-link" href="index.html">Home</a>
 						</li>
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="lesson.html">Lesson</a>
-						</li>
+						</li> -->
 						<li class="nav-item">
 							<a class="nav-link" href="about.html">About</a>
 						</li>
@@ -50,27 +50,25 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<img src="images/scene_7-min.jpg" class=" jap-pics img-fluid " alt="Photos of Japanese Architecture"
-					style="width: 100%;">
+				<div class="jap-pics img-fluid hero" alt="Photos of Japanese Architecture"></div>
 			</div>
 		</div>
-
 	</div>
 
 	<div class="container">
 		<div class="row">
-			<div class="col-12 col-md-9 col-xl-6  offset-md-1 offset-xl-3 mb-md-5">
+			<div class="col-12 col-md-10 col-lg-8 col-xl-6 offset-md-1 offset-lg-2 offset-xl-3 mb-md-5">
 				<h1 class="text-center mb-4 mt-4">Contact</h1>
 
-				<p class='para contact'>Please
+				<p class='para contact'>Lessons are given online via Skype | Zoom on a one-to-one basis. Please
 					send your full name, level of your
 					proficiency and the reason you are interested to learn Japanese, to the <em>email</em> below, if
 					you wish to enroll
 					for lessons.
 				</p>
 				<p class="mt-lg-2 mb-lg-5 m-b">
-					<span><img src=" images/email_1.png" width=25px class="mr-1 ml-0"></span>
-					<em class="hdg-colour">japaneselessons4u@gmail.com</em>
+					<span><img src=" images/16x16.png" width=25px class="mr-1 ml-0 email-1"></span>
+					<em class="hdg-colour email">japaneselessons4u@gmail.com</em>
 				</p>
 			</div>
 		</div>
