--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 						<li class=" nav-item">
 							<a class="nav-link active" href="index.html">Home</a>
 						</li>
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="lesson.html">Lesson</a>
-						</li>
+						</li> -->
 						<li class="nav-item">
 							<a class="nav-link" href="about.html">About</a>
 						</li>
@@ -49,7 +49,6 @@
 	</header>
 
 	<main class="container" role="main">
-
 		<div id="welcomeCarousel" class="carousel slide carousel-fade" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#welcomeCarousel" data-slide-to="0" class="active"></li>
@@ -75,12 +74,13 @@
 
 		<div class="container">
 			<div class="row">
-				<div class="col-md-9 col-sm-10 col-lg-8 col-12 offset-sm-1 offset-md-1 offset-lg-2">
-					<h1 class="mb-4 mt-0 text-center">Home</h1>
+				<div class="col-md-8 col-sm-10 col-lg-8 col-xl-7 col-12 offset-sm-1 offset-md-2 offset-lg-2">
+					<h1 class="mb-4 mt-0 text-center">Japanese Lessons Online</h1>
 
 					<p class="para para-home">
 						I am a qualified and experienced Japanese Language Tutor. </br>
-						Some of the textbooks used for teaching are <em>Minna no Nihongo, Genki</em> and <em>Japanese
+						Some of the textbooks used for teaching are <em>Minna no Nihongo, Genki</em> and
+						<em>Japanese
 							for
 							Busy
 							People.</em></br>
@@ -90,12 +90,14 @@
 							class="text-success">advanced</em> students.<br />
 
 						<span class="clearfix">
-							<img src="images/lesson_scene_round.png" width=80px
-								class="rounded-circle img-fluid pics float-left mt-4 ml-4"
-								alt="Photo of tutor pointing at white board" style="border: none;">
+							<a href="about.html">
+								<img src="images/lesson_scene_round.png" width=80px
+									class="rounded-circle img-fluid pics float-left mt-4 ml-4"
+									alt="Photo of tutor pointing at white board" data-placement="right"
+									data-toggle="tooltip" title="About me" style="border: none;"></a>
 
 							<img src="images/contentBG_1.png" width="50px"
-								class="rounded img-fluid float-right mt-5 mr-4 hide-412" alt=" Japanese teapot"
+								class="rounded img-fluid float-right mt-5 mr-4" alt=" Japanese teapot"
 								data-placement="left" data-toggle="tooltip" title="Japanese teapot">
 						</span><br>
 						<span class="text-info  "><em><b>Lessons from £22/hour</b></em></span>
