--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<div class="jap-pics img-fluid hero" alt="Photos of Japanese Architecture"></div>
+				<div class="jap-pics img-fluid hero" alt="Photos of Japanese Architecture"
+					style="border: 2px solid red;"></div>
 			</div>
 		</div>
 	</div>
