--- a/about.html
+++ b/about.html
@@ -54,7 +54,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
-					<div class="jap-pics-6 img-fluid hero" alt="Photos of Japanese Architecture"></div>
+					<div class="jap-pics-6 img-fluid hero" style="border: 2px solid red;"
+						alt="Photos of Japanese Architecture"></div>
 				</div>
 			</div>
 		</div>
