Update CSS file
Reduced height of images.

--- a/about.html
+++ b/about.html
@@ -54,8 +54,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
-					<div class="jap-pics-6 img-fluid hero" style="border: 2px solid red;"
-						alt="Photos of Japanese Architecture"></div>
+					<div class="jap-pics-6 img-fluid hero" alt="Photos of Japanese Architecture"></div>
 				</div>
 			</div>
 		</div>
@@ -71,9 +70,10 @@
 						who has
 						been living in the
 						UK since 1996.</br>
-						I am now living in Reading, Berkshire and teaching Japanese Language and Culture to people
+						I teach Japanese Language and Culture to
+						people
 						of any age and level, from beginners to advanced.</br>
-						I have gained a qualification in <em class="text-success">Teaching Japanese as a Foreign
+						I gained a qualification in <em class="text-success">Teaching Japanese as a Foreign
 							Language</em>
 						from the Institute
 						of
@@ -115,28 +115,29 @@
 		</div>
 	</main>
 
-	<footer id="sticky-footer" class="text-white">
-		<div class="row-new p-0 mt-0">
-			<div class="column-new">
-				<p class="m-0 p-1" style="text-align: left;">
-					<span class="small-font">Crafted by <span class="badge badge-success ml-2 badge-new">Humingbird
-							Designs
-						</span></span>
-					<img src="images/bird.jpg" width=30px class="rounded ml-2" alt="bird">
-				</p>
+	<div class="container">
+		<footer id="sticky-footer" class="text-white">
+			<div class="row">
+				<div class="col-12">
+					<p class="m-0 p-1" style="text-align: left;">
+						<span class="small-font">Crafted by <span class="badge badge-success ml-2 badge-new">Humingbird
+								Designs
+							</span></span>
+						<img src="images/bird.jpg" width=30px class="rounded ml-2" alt="bird">
+					</p>
+				</div>
+				<div class="col-12">
+					<p class="m-0 pl-1">
+						<span class="small-font" style="text-align: right;"> &copy; 2021
+							SJL
+							All
+							rights
+							reserved.</span>
+					</p>
+				</div>
 			</div>
-
-			<div class="column-new">
-				<p class="p-734 m-0 p-1">
-					<span class="small-font" style="text-align: right;"> &copy; 2021
-						SJL
-						All
-						rights
-						reserved.</span>
-				</p>
-			</div>
-		</div>
-	</footer>
+		</footer>
+	</div>
 
 	<!-- Bootstrap core JavaScript -->
 	<script src="vendor/jquery/jquery.slim.min.js"></script>
