--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 
-	<title>Sonoko's Japanese Lessons</title>
+	<title>Sonoko's Japanese Lessons, Reading</title>
 </head>
 
 <body>
@@ -49,7 +49,7 @@
 	</header>
 
 	<main class="container" role="main">
-		<div id="welcomeCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+		<div id="welcomeCarousel" class="carousel slide carousel-fade hero" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#welcomeCarousel" data-slide-to="0" class="active"></li>
 				<li data-target="#welcomeCarousel" data-slide-to="1"></li>
@@ -78,7 +78,9 @@
 					<h1 class="mb-4 mt-0 text-center">Japanese Lessons Online</h1>
 
 					<p class="para para-home">
-						I am a qualified and experienced Japanese Language Tutor. </br>
+						Currently I live in <em>Reading, Berkshire</em>, and I am a qualified and experienced Japanese
+						Language
+						Tutor. </br>
 						Some of the textbooks used for teaching are <em>Minna no Nihongo, Genki</em> and
 						<em>Japanese
 							for
