--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<div class="jap-pics img-fluid hero" alt="Photos of Japanese Architecture"
-					style="border: 2px solid red;"></div>
+				<div class="jap-pics img-fluid hero" alt="Photos of Japanese Architecture"></div>
 			</div>
 		</div>
 	</div>
@@ -61,7 +60,8 @@
 			<div class="col-12 col-md-10 col-lg-8 col-xl-6 offset-md-1 offset-lg-2 offset-xl-3 mb-md-5">
 				<h1 class="text-center mb-4 mt-4">Contact</h1>
 
-				<p class='para contact'>Lessons are given online via Skype | Zoom on a one-to-one basis. Please
+				<p class='para contact'>Lessons are given online via Skype <span class="pipe">|</span> Zoom on a
+					one-to-one basis. Please
 					send your full name, level of your
 					proficiency and the reason you are interested to learn Japanese, to the <em>email</em> below, if
 					you wish to enroll
