--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 					class="col-md-8 col-sm-10 col-lg-8 col-xl-6 col-12 offset-sm-1 offset-md-2 offset-lg-2 offset-xl-3">
 					<!-- <div class="col-12 col-md-9 col-xl-7 offset-md-1 offset-xl-3 mb-md-5"> -->
 					<h1 class="text-center mb-4 mt-4">About</h1>
-					<p class="para para-home" style="overflow-wrap: break-word; ">I am a native
+					<p class="para para-home" style="overflow-wrap: break-word; ">My name is Sonok and I am a native
 						Japanese woman
 						who has
 						been living in the
