--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 
-	<title>Japanese Lessons Online</title>
+	<title>Sonoko's Japanese Lessons Online</title>
 </head>
 
 <body>
