Updated main heading.

--- a/about.html
+++ b/about.html
@@ -69,10 +69,10 @@
 						Japanese woman
 						who has
 						been living in the
-						UK since 1996.</br>
+						UK since 1996.</br></br>
 						I teach Japanese Language and Culture to
 						people
-						of any age and level, from beginners to advanced.</br>
+						of any age and level, from beginners to advanced.</br><br>
 						I gained a qualification in <em class="text-success">Teaching Japanese as a Foreign
 							Language</em>
 						from the Institute
