--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/site.css">
-	<title>Sonoko's Japanese Lessons</title>
+	<title>Japanese Lessons Online, Reading</title>
 </head>
 
 <body>
