--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 
-	<title>Private Japanese Lessons Online</title>
+	<title>Japanese Lessons Online, Reading</title>
 </head>
 
 <body>
@@ -80,16 +80,16 @@
 					<p class="para para-home">
 						Currently I live in <em>Reading, Berkshire</em>, and I am a qualified and experienced Japanese
 						Language
-						Tutor. </br>
+						Tutor. </br></br>
 						Some of the textbooks used for teaching are <em>Minna no Nihongo, Genki</em> and
 						<em>Japanese
 							for
 							Busy
-							People.</em></br>
+							People.</em></br></br>
 						Don't
-						worry if you are a complete beginner, the lessons will be tailored to your needs.<br>
+						worry if you are a complete beginner, the lessons will be tailored to your needs.<br><br>
 						The lessons taught are for <em class="text-success">beginners, intermediate</em> and <em
-							class="text-success">advanced</em> students.<br />
+							class="text-success">advanced</em> students.<br>
 
 						<span class="clearfix">
 							<a href="about.html">
