--- a/about.html
+++ b/about.html
@@ -49,70 +49,62 @@
 		</nav>
 	</header>
 
-	<main role="main">
-		<div class="container">
-			<div class="row">
-				<div class="col-12">
-					<!-- <div class="jap-pics-6 img-fluid hero" alt="Photos of Japanese Architecture"
-								style="height:160px; width:150px;">
-							</div> -->
-					<div class="jap-pics-6 scene-6 hero img-fluid" alt="Photos of Japanese Architecture">
-					</div>
-					<!-- <img class=jap-pics-6 src="images/scene6-400.jpg" width="100" height="225"> -->
-					<!-- <img class="jap-pics-6 scene-6 hero img-fluid" src="images/scene6-400.jpg"
-						alt="Photos of Japanese Architecture"> -->
-				</div>
+	<!-- <main role="main"> -->
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<div class="jap-pics-6 img-fluid hero" alt="Photos of Japanese Architecture"></div>
 			</div>
 		</div>
+	</div>
 
-		<div class="container">
-			<div class="row">
-				<div
-					class="col-md-8 col-sm-10 col-lg-8 col-xl-6 col-12 offset-sm-1 offset-md-2 offset-lg-2 offset-xl-3">
-					<!-- <div class="col-12 col-md-9 col-xl-7 offset-md-1 offset-xl-3 mb-md-5"> -->
-					<h1 class="text-center mb-4 mt-4">About</h1>
-					<p class="para para-home" style="overflow-wrap: break-word; ">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8 col-sm-10 col-lg-8 col-xl-6 col-12 offset-sm-1 offset-md-2 offset-lg-2 offset-xl-3">
+				<!-- <div class="col-12 col-md-9 col-xl-7 offset-md-1 offset-xl-3 mb-md-5"> -->
+				<h1 class="text-center mb-4 mt-4">About</h1>
+				<p class="para para-home" style="overflow-wrap: break-word; ">
 
-						My name is Sonoko and I am a
-						native
-						Japanese woman
-						who has
-						been living in the
-						UK since 1996.<br>
+					My name is Sonoko and I am a
+					native
+					Japanese woman
+					who has
+					been living in the
+					UK since 1996.<br>
 
-						I teach Japanese Language and Culture to
-						people
-						of any age and level, from beginners to advanced.<br>
-						I gained a qualification in <em class="text-success">Teaching Japanese as a Foreign
-							Language</em>
-						from the Institute
-						of
-						International
-						Education in London (IIEL).<br>
+					I teach Japanese Language and Culture to
+					people
+					of any age and level, from beginners to advanced.<br>
+					I gained a qualification in <em class="text-success">Teaching Japanese as a Foreign
+						Language</em>
+					from the Institute
+					of
+					International
+					Education in London (IIEL).<br>
 
-						<a href="http://www.iiel.org.uk/english/index.html" target="_blank"><em>The
-								Institute
-								of
-								International
-								Education in London</em></a> (IIEL) is an international educational institution
-						based in
-						London.</br>
+					<a href="http://www.iiel.org.uk/english/index.html" target="_blank"><em>The
+							Institute
+							of
+							International
+							Education in London</em></a> (IIEL) is an international educational institution
+					based in
+					London.</br>
 
-						<span class="clearfix">
-							<img src="images/lesson_scene_round.png" width=80px
-								class="rounded-circle img-fluid float-left mt-4 ml-3"
-								alt="Photo of tutor pointing at white board" style="border: none;">
+					<span class="clearfix">
+						<img src="images/lesson_scene_round.png" width=80px
+							class="rounded-circle img-fluid float-left mt-4 ml-3"
+							alt="Photo of tutor pointing at white board" style="border: none;">
 
-							<img src="images/contentBG_5.png" width="50px"
-								class="rounded img-fluid float-right mt-5 mb-3 mr-4 hide-412" alt=" Japanese cooked Eel"
-								data-placement="left" data-toggle="tooltip" title="Japanese cooked eel">
-						</span>
-						<br>
-					</p>
-				</div>
+						<img src="images/contentBG_5.png" width="50px"
+							class="rounded img-fluid float-right mt-5 mb-3 mr-4 hide-412" alt=" Japanese cooked Eel"
+							data-placement="left" data-toggle="tooltip" title="Japanese cooked eel">
+					</span>
+					<br>
+				</p>
 			</div>
 		</div>
-	</main>
+	</div>
+	<!-- </main> -->
 
 	<div class="container">
 		<footer id="sticky-footer" class="text-white">
