Using gradient background colour.

--- a/about.html
+++ b/about.html
@@ -81,12 +81,11 @@
 					of
 					International
 					Education in London (IIEL).<br>
-
 					<a href="http://www.iiel.org.uk/english/index.html" target="_blank"><em>The
 							Institute
 							of
 							International
-							Education in London</em></a> (IIEL) is an international educational institution
+							Education in London</em></a> is an international educational institution
 					based in
 					London.</br>
 
