--- a/about.html
+++ b/about.html
@@ -63,8 +63,7 @@
 			<div class="col-md-8 col-sm-10 col-lg-8 col-xl-6 col-12 offset-sm-1 offset-md-2 offset-lg-2 offset-xl-3">
 				<!-- <div class="col-12 col-md-9 col-xl-7 offset-md-1 offset-xl-3 mb-md-5"> -->
 				<h1 class="text-center mb-4 mt-4">About</h1>
-				<p class="para para-home" style="overflow-wrap: break-word; ">
-
+				<p class="para para-home" style="overflow-wrap: break-word;">
 					My name is Sonoko and I am a
 					native
 					Japanese woman
@@ -81,11 +80,12 @@
 					of
 					International
 					Education in London (IIEL).<br>
-					<a href="http://www.iiel.org.uk/english/index.html" target="_blank"><em>The
-							Institute
-							of
-							International
-							Education in London</em></a> is an international educational institution
+					<a href="http://www.iiel.org.uk/english/index.html" target="_blank"><span
+							style="text-decoration-line: underline; "><em>The
+								Institute
+								of
+								International
+								Education in London</em></span></a> is an international educational institution
 					based in
 					London.</br>
 
