--- a/index.html
+++ b/index.html
@@ -75,10 +75,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-sm-10 col-lg-8 col-xl-7 col-12 offset-sm-1 offset-md-2 offset-lg-2">
-					<h1 class="mb-4 mt-0 text-center">Japanese Lessons Online</h1>
+					<h1 class="mb-4 mt-0 text-center">Japanese Lessons Online - SJL</h1>
 
 					<p class="para para-home">
-						Currently I live in <em>Reading, Berkshire</em>, and I am a qualified and experienced Japanese
+						<em>Welcome to Sonoko's Japanese Lessons - SJL.</em> <br>Currently I live in <em>Reading,
+							Berkshire</em>,
+						and
+						I am
+						a qualified and experienced Japanese
 						Language
 						Tutor. </br></br>
 						Some of the textbooks used for teaching are <em>Minna no Nihongo, Genki</em> and
