Minor tweaks for SEO.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Learn Japanese at your own pace. I teach basic and advanced Japanese lessons.">
 	<link rel="shortcut icon" href="images/icon.gif" />
 
 	<!-- Bootstrap core CSS -->
@@ -13,7 +14,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 
-	<title>Japanese Lessons Online, Reading</title>
+	<title>Learn Japanese Online | Reading, UK</title>
 </head>
 
 <body>
@@ -21,8 +22,10 @@
 		<nav class="navbar navbar-expand-sm navbar-dark fixed-top my-primary">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<img src="images/icon.gif" width="30" height="30" class="d-inline-block align-top" alt="logo">
-					SJL</a>
+					<span
+						style="background-color: rgb(66, 134, 66); padding: 0 6px; border-radius: 3px; font-size: 1.1rem;">SJL</span>
+				</a>
+
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
 					aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -75,7 +78,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-sm-10 col-lg-8 col-xl-7 col-12 offset-sm-1 offset-md-2 offset-lg-2">
-					<h1 class="mb-4 mt-0 text-center">Japanese Lessons Online - SJL</h1>
+					<h1 class="mb-4 mt-0 text-center">Japanese Lessons Online</h1>
 
 					<p class="para para-home">
 						<em>Welcome to Sonoko's Japanese Lessons - SJL.</em> <br>Currently I live in <em>Reading,
@@ -84,12 +87,12 @@
 						I am
 						a qualified and experienced Japanese
 						Language
-						Tutor. </br></br>
+						Tutor. </br>
 						Some of the textbooks used for teaching are <em>Minna no Nihongo, Genki</em> and
 						<em>Japanese
 							for
 							Busy
-							People.</em></br></br>
+							People.</em></br>
 						Don't
 						worry if you are a complete beginner, the lessons will be tailored to your needs.<br><br>
 						The lessons taught are for <em class="text-success">beginners, intermediate</em> and <em
