--- a/about.html
+++ b/about.html
@@ -22,8 +22,8 @@
 		<nav class="navbar navbar-expand-sm navbar-dark fixed-top my-primary">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<img src="images/icon.gif" width="30" height="30" class="d-inline-block align-top" alt="logo">
-					SJL</a>
+					<span style="background-color: rgb(66, 134, 66); padding: 1px 4px; border-radius: 3px;">SJL</span>
+				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
 					aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
