Updated Home page; minor tweaks to improve SEO.

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 
-	<title>Japanese Lessons Online, Reading</title>
+	<title>About | Learn Japanese Online | Reading, UK</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 		<nav class="navbar navbar-expand-sm navbar-dark fixed-top my-primary">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<span style="background-color: rgb(66, 134, 66); padding: 1px 4px; border-radius: 3px;">SJL</span>
+					<span class="logo">SJL</span>
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
 					aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
