--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 
-	<title>Learn Japanese Online | Reading, UK</title>
+	<title>Home | Learn Japanese Online | Reading, UK</title>
 </head>
 
 <body>
@@ -22,8 +22,7 @@
 		<nav class="navbar navbar-expand-sm navbar-dark fixed-top my-primary">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<span
-						style="background-color: rgb(66, 134, 66); padding: 0 6px; border-radius: 3px; font-size: 1.1rem;">SJL</span>
+					<span class="logo">SJL</span>
 				</a>
 
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -80,23 +79,36 @@
 				<div class="col-md-8 col-sm-10 col-lg-8 col-xl-7 col-12 offset-sm-1 offset-md-2 offset-lg-2">
 					<h1 class="mb-4 mt-0 text-center">Japanese Lessons Online</h1>
 
-					<p class="para para-home">
-						<em>Welcome to Sonoko's Japanese Lessons - SJL.</em> <br>Currently I live in <em>Reading,
+					<section class="para para-home">
+						<em>Welcome to Sonoko's Japanese Lessons - <span class="logo-2">SJL.</em> <br>Currently I live
+						in
+						<em>Reading,
 							Berkshire</em>,
 						and
 						I am
 						a qualified and experienced Japanese
 						Language
-						Tutor. </br>
+						Tutor. The list below should help you judge what suits you best.<br>
+						<ul>
+							<li>Lessons from Novice to Advanced.</li>
+							<li>All ages welcome.</li>
+							<li>Lessons tailored to your requirements.</li>
+							<li>Learn <strong>Kanji, Hiragana</strong> or <strong>Katakana</strong></li>
+							<li>Japaenese for busy people is also catered for.</li>
+							<li>Learn at your own pace.</li>
+						</ul>
+
 						Some of the textbooks used for teaching are <em>Minna no Nihongo, Genki</em> and
 						<em>Japanese
 							for
 							Busy
 							People.</em></br>
-						Don't
-						worry if you are a complete beginner, the lessons will be tailored to your needs.<br><br>
-						The lessons taught are for <em class="text-success">beginners, intermediate</em> and <em
-							class="text-success">advanced</em> students.<br>
+						For those who wish to learn Japanese within a short period of time then more than one lesson a
+						week may be necessary. Such cases may arise when one needs to go abroad on a work related trip
+						or on
+						holiday.
+						<br><br>
+
 
 						<span class="clearfix">
 							<a href="about.html">
@@ -110,7 +122,7 @@
 								data-placement="left" data-toggle="tooltip" title="Japanese teapot">
 						</span><br>
 						<span class="text-info  "><em><b>Lessons from £22/hour</b></em></span>
-					</p>
+					</section>
 				</div>
 			</div>
 		</div>
