--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/site.css">
-	<title>Japanese Lessons Online, Reading</title>
+	<title>Contact | Learn Japanese Online | Reading, UK</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
 		<nav class="navbar navbar-expand-sm navbar-dark fixed-top my-primary">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<span style="background-color: rgb(66, 134, 66); padding: 1px 4px; border-radius: 3px;">SJL</span>
+					<span class="logo">SJL</span>
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
 					aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
