Updated web pages for better responsiveness. Improved text sections for better readability.

--- a/about.html
+++ b/about.html
@@ -63,25 +63,28 @@
 			<div class="col-md-8 col-sm-10 col-lg-8 col-xl-6 col-12 offset-sm-1 offset-md-2 offset-lg-2 offset-xl-3">
 				<!-- <div class="col-12 col-md-9 col-xl-7 offset-md-1 offset-xl-3 mb-md-5"> -->
 				<h1 class="text-center mb-4 mt-4">About</h1>
-				<p class="para para-home" style="overflow-wrap: break-word;">
-					My name is Sonoko and I am a
-					native
-					Japanese woman
-					who has
-					been living in the
-					UK since 1996.<br>
+				<section class="para para-home" style="overflow-wrap: break-word;">
+					<p>My name is Sonoko and I am a
+						native
+						Japanese woman
+						who has
+						been living in the
+						UK since 1996.
+					</p>
 
-					I teach Japanese Language and Culture to
-					people
-					of any age and level, from beginners to advanced.<br>
-					I gained a qualification in <em class="text-success">Teaching Japanese as a Foreign
-						Language</em>
-					from the Institute
-					of
-					International
-					Education in London (IIEL).<br>
+					<p>I teach Japanese Language and Culture to
+						people
+						of any age and level, from beginners to advanced.</p>
+
+					<p>I gained a qualification in <em class="text-success">Teaching Japanese as a Foreign
+							Language</em>
+						from the Institute
+						of
+						International
+						Education in London (IIEL).</p>
+
 					<a href="http://www.iiel.org.uk/english/index.html" target="_blank"><span
-							style="text-decoration-line: underline; "><em>The
+							style="text-decoration-line: none; "><em>The
 								Institute
 								of
 								International
@@ -99,7 +102,7 @@
 							data-placement="left" data-toggle="tooltip" title="Japanese cooked eel">
 					</span>
 					<br>
-				</p>
+				</section>>
 			</div>
 		</div>
 	</div>
