--- a/contact.html
+++ b/contact.html
@@ -59,17 +59,27 @@
 			<div class="col-12 col-md-10 col-lg-8 col-xl-6 offset-md-1 offset-lg-2 offset-xl-3 mb-md-5">
 				<h1 class="text-center mb-4 mt-4">Contact</h1>
 
-				<p class='para contact'>Lessons are given online via Skype <span class="pipe">|</span> Zoom on a
-					one-to-one basis. Please
-					send your full name, level of your
-					proficiency and the reason you are interested to learn Japanese, to the <em>email</em> below, if
-					you wish to enroll
-					for lessons.
-				</p>
-				<p class="mt-lg-2 mb-lg-5 m-b">
-					<span><img src=" images/16x16.png" width=25px class="mr-1 ml-0 email-1"></span>
-					<em class="hdg-colour email">japaneselessons4u@gmail.com</em>
-				</p>
+				<section class='para contact'>
+					<p>Lessons are given online via Skype <span class="pipe">|</span> Zoom on a
+						one-to-one basis.
+					</p>
+					<p>Should
+						you wish to enroll
+						for lessons then please feel free to send your full name, level of your
+						proficiency and the reason you are interested to learn Japanese, to the <em>email</em>
+						below. <br>Waiting to hear from you.
+					</p>
+					<!-- <p class="mt-lg-2 mb-lg-5 m-b">
+						<span><img src=" images/16x16.png" width=25px class="mr-1 ml-0 email-1"></span>
+						<em class="hdg-colour email"><strong>japaneselessons4u@gmail.com</strong></em>
+					</p> -->
+
+					<p class="mt-lg-2">
+						<span><img src=" images/16x16.png" width=25px class="mr-1 ml-0 email-1"></span>
+						<em class="hdg-colour email"><strong>japaneselessons4u@gmail.com</strong></em>
+					</p>
+				</section>
+
 			</div>
 		</div>
 	</div>
