--- a/index.html
+++ b/index.html
@@ -80,15 +80,17 @@
 					<h1 class="mb-4 mt-0 text-center">Japanese Lessons Online</h1>
 
 					<section class="para para-home">
-						<em>Welcome to Sonoko's Japanese Lessons - <span class="logo-2">SJL.</em> <br>Currently I live
-						in
-						<em>Reading,
-							Berkshire</em>,
-						and
-						I am
-						a qualified and experienced Japanese
-						Language
-						Tutor. The list below should help you judge what suits you best.<br>
+						<p><em>Welcome to Sonoko's Japanese Lessons - <span class="logo-2">SJL</em>.<br>
+							Currently I live
+							in
+							<em>Reading,
+								Berkshire</em>,
+							and
+							I am
+							a qualified and experienced Japanese
+							Language
+							Tutor. The list below should help you judge what suits you best.
+						</p>
 						<ul>
 							<li>Lessons from Novice to Advanced.</li>
 							<li>All ages welcome.</li>
@@ -98,17 +100,20 @@
 							<li>Learn at your own pace.</li>
 						</ul>
 
-						Some of the textbooks used for teaching are <em>Minna no Nihongo, Genki</em> and
-						<em>Japanese
-							for
-							Busy
-							People.</em></br>
-						For those who wish to learn Japanese within a short period of time then more than one lesson a
-						week may be necessary. Such cases may arise when one needs to go abroad on a work related trip
-						or on
-						holiday.
-						<br><br>
-
+						<p>Some of the textbooks used for teaching are <em>Minna no Nihongo, Genki</em> and
+							<em>Japanese
+								for
+								Busy
+								People.</em>
+						</p>
+						<p>
+							For those who wish to learn Japanese within a short period of time then more than one lesson
+							a
+							week may be necessary. Such cases may arise when one needs to go abroad on a work related
+							trip
+							or on
+							holiday.
+						</p>
 
 						<span class="clearfix">
 							<a href="about.html">
