Updated logo to .png.

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="shortcut icon" href="images/icon.gif" />
+	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
 		<nav class="navbar navbar-expand-sm navbar-dark fixed-top my-primary">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<span class="logo">SJL</span>
+					<img src="images/favicon-32x32.png">
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
 					aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,10 +69,6 @@
 						proficiency and the reason you are interested to learn Japanese, to the <em>email</em>
 						below. <br>Waiting to hear from you.
 					</p>
-					<!-- <p class="mt-lg-2 mb-lg-5 m-b">
-						<span><img src=" images/16x16.png" width=25px class="mr-1 ml-0 email-1"></span>
-						<em class="hdg-colour email"><strong>japaneselessons4u@gmail.com</strong></em>
-					</p> -->
 
 					<p class="mt-lg-2">
 						<span><img src=" images/16x16.png" width=25px class="mr-1 ml-0 email-1"></span>
