--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="shortcut icon" href="images/icon.gif" />
+	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
 		<nav class="navbar navbar-expand-sm navbar-dark fixed-top my-primary">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<span class="logo">SJL</span>
+					<img src="images/favicon-32x32.png">
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
 					aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,7 +61,6 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-sm-10 col-lg-8 col-xl-6 col-12 offset-sm-1 offset-md-2 offset-lg-2 offset-xl-3">
-				<!-- <div class="col-12 col-md-9 col-xl-7 offset-md-1 offset-xl-3 mb-md-5"> -->
 				<h1 class="text-center mb-4 mt-4">About</h1>
 				<section class="para para-home" style="overflow-wrap: break-word;">
 					<p>My name is Sonoko and I am a
