Minor tweaks as per HTML checker

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
 	<!-- Required meta tags -->
@@ -22,7 +22,7 @@
 		<nav class="navbar navbar-expand-sm navbar-dark fixed-top my-primary">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<img src="images/favicon-32x32.png">
+					<img src="images/favicon-32x32.png" alt="brand">
 				</a>
 
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -50,7 +50,7 @@
 		</nav>
 	</header>
 
-	<main class="container" role="main">
+	<main class="container">
 		<div id="welcomeCarousel" class="carousel slide carousel-fade hero" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#welcomeCarousel" data-slide-to="0" class="active"></li>
@@ -80,8 +80,10 @@
 					<h1 class="mb-4 mt-0 text-center">Japanese Lessons Online</h1>
 
 					<section class="para para-home">
-						<p><em>Welcome to Sonoko's Japanese Lessons - <span class="logo-2">SJL</em>.<br>
-							Currently I live
+						<h5 style="color: rgb(42, 65, 194);">Welcome to Sonoko's Japanese Lessons - <span
+								class="logo-2"><i>SJL</i></span>.
+						</h5>
+						<p>Currently I live
 							in
 							<em>Reading,
 								Berkshire</em>,
@@ -117,14 +119,14 @@
 
 						<span class="clearfix">
 							<a href="about.html">
-								<img src="images/lesson_scene_round.png" width=80px
+								<img src="images/lesson_scene_round.png" width=80
 									class="rounded-circle img-fluid pics float-left mt-4 ml-4"
 									alt="Photo of tutor pointing at white board" data-placement="right"
 									data-toggle="tooltip" title="About me" style="border: none;"></a>
 
-							<img src="images/contentBG_1.png" width="50px"
-								class="rounded img-fluid float-right mt-5 mr-4" alt=" Japanese teapot"
-								data-placement="left" data-toggle="tooltip" title="Japanese teapot">
+							<img src="images/contentBG_1.png" width="50" class="rounded img-fluid float-right mt-5 mr-4"
+								alt=" Japanese teapot" data-placement="left" data-toggle="tooltip"
+								title="Japanese teapot">
 						</span><br>
 						<span class="text-info  "><em><b>Lessons from £22/hour</b></em></span>
 					</section>
