Minor tweaks to pass HTML checker

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
 	<!-- Required meta tags -->
@@ -22,7 +22,7 @@
 		<nav class="navbar navbar-expand-sm navbar-dark fixed-top my-primary">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<img src="images/favicon-32x32.png">
+					<img src="images/favicon-32x32.png" alt="brand">
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
 					aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +53,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<div class="jap-pics-6 img-fluid hero" alt="Photos of Japanese Architecture"></div>
+				<div class="jap-pics-6 img-fluid hero"></div>
 			</div>
 		</div>
 	</div>
@@ -63,6 +63,7 @@
 			<div class="col-md-8 col-sm-10 col-lg-8 col-xl-6 col-12 offset-sm-1 offset-md-2 offset-lg-2 offset-xl-3">
 				<h1 class="text-center mb-4 mt-4">About</h1>
 				<section class="para para-home" style="overflow-wrap: break-word;">
+					<h4>Profile</h4>
 					<p>My name is Sonoko and I am a
 						native
 						Japanese woman
@@ -89,14 +90,14 @@
 								International
 								Education in London</em></span></a> is an international educational institution
 					based in
-					London.</br>
+					London.<br>
 
 					<span class="clearfix">
-						<img src="images/lesson_scene_round.png" width=80px
+						<img src="images/lesson_scene_round.png" width=80
 							class="rounded-circle img-fluid float-left mt-4 ml-3"
 							alt="Photo of tutor pointing at white board" style="border: none;">
 
-						<img src="images/contentBG_5.png" width="50px"
+						<img src="images/contentBG_5.png" width="50"
 							class="rounded img-fluid float-right mt-5 mb-3 mr-4 hide-412" alt=" Japanese cooked Eel"
 							data-placement="left" data-toggle="tooltip" title="Japanese cooked eel">
 					</span>
@@ -115,7 +116,7 @@
 						<span class="small-font">Crafted by <span class="badge badge-success ml-2 badge-new">Humingbird
 								Designs
 							</span></span>
-						<img src="images/bird.jpg" width=30px class="rounded ml-2" alt="bird">
+						<img src="images/bird.jpg" width=30 class="rounded ml-2" alt="bird">
 					</p>
 				</div>
 				<div class="col-12">
