--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
 	<!-- Required meta tags -->
@@ -19,7 +19,7 @@
 		<nav class="navbar navbar-expand-sm navbar-dark fixed-top my-primary">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<img src="images/favicon-32x32.png">
+					<img src="images/favicon-32x32.png" alt="brand">
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
 					aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<div class="jap-pics img-fluid hero" alt="Photos of Japanese Architecture"></div>
+				<div class="jap-pics img-fluid hero"></div>
 			</div>
 		</div>
 	</div>
@@ -71,7 +71,7 @@
 					</p>
 
 					<p class="mt-lg-2">
-						<span><img src=" images/16x16.png" width=25px class="mr-1 ml-0 email-1"></span>
+						<span><img src=" images/16x16.png" width=25 class="mr-1 ml-0 email-1"></span>
 						<em class="hdg-colour email"><strong>japaneselessons4u@gmail.com</strong></em>
 					</p>
 				</section>
@@ -88,7 +88,7 @@
 						<span class="small-font">Crafted by <span class="badge badge-success ml-2 badge-new">Humingbird
 								Designs
 							</span></span>
-						<img src="images/bird.jpg" width=30px class="rounded ml-2" alt="bird">
+						<img src="images/bird.jpg" width=30 class="rounded ml-2" alt="bird">
 					</p>
 				</div>
 				<div class="col-12">
