--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
 					<h1 class="mb-4 mt-0 text-center">Japanese Lessons Online</h1>
 
 					<section class="para para-home">
-						<h5 style="color: rgb(42, 65, 194);">Welcome to Sonoko's Japanese Lessons - <span
-								class="logo-2"><i>SJL</i></span>.
-						</h5>
+						<h4>Welcome to Sonoko's Japanese Lessons - <span class="logo-2"><i>SJL</i></span>.
+						</h4>
 						<p>Currently I live
 							in
 							<em>Reading,
@@ -143,7 +142,7 @@
 						<span class="small-font">Crafted by <span class="badge badge-success ml-2 badge-new">Humingbird
 								Designs
 							</span></span>
-						<img src="images/bird.jpg" width=30px class="rounded ml-2" alt="bird">
+						<img src="images/bird.jpg" width=30 class="rounded ml-2" alt="bird">
 					</p>
 				</div>
 				<div class="col-12">
