--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,7 @@
 				<h1 class="text-center mb-4 mt-4">Contact</h1>
 
 				<section class='para contact'>
+					<h4>Contact Info</h4>
 					<p>Lessons are given online via Skype <span class="pipe">|</span> Zoom on a
 						one-to-one basis.
 					</p>
@@ -71,7 +72,7 @@
 					</p>
 
 					<p class="mt-lg-2">
-						<span><img src=" images/16x16.png" width=25 class="mr-1 ml-0 email-1"></span>
+						<span><img src=" images/16x16.png" width=25 class="mr-1 ml-0 email-1" alt="email icon"></span>
 						<em class="hdg-colour email"><strong>japaneselessons4u@gmail.com</strong></em>
 					</p>
 				</section>
