Minor tweaks to improve user experience

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<h1 class="mb-4 mt-0 text-center">Japanese Lessons Online</h1>
 
 					<section class="para para-home">
-						<h4>Welcome to Sonoko's Japanese Lessons - <span class="logo-2"><i>SJL</i></span>.
+						<h4>Welcome to Sonoko's Japanese Lessons - <span class="logo-2"><i>SJL</i></span>
 						</h4>
 						<p>Currently I live
 							in
