--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 			<div class="col-12 col-md-10 col-lg-8 col-xl-6 offset-md-1 offset-lg-2 offset-xl-3 mb-md-5">
 				<h1 class="text-center mb-4 mt-4">Contact</h1>
 
-				<section class='para contact'>
+				<section class='para para-home contact'>
 					<h4>Contact Info</h4>
 					<p>Lessons are given online via Skype <span class="pipe">|</span> Zoom on a
 						one-to-one basis.
