Updated lesson info

--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
 					<section class="para para-home">
 						<h4>Welcome to Sonoko's Japanese Lessons - <span class="logo-2"><i>SJL</i></span>
 						</h4>
+
+						<p>
+							Learn Japanese from the comfort of your own home.
+							Lessons are flexible and you can learn at your own pace.
+						</p>
+
+						<p>Lessons are given online via Skype <span class="pipe">|</span> Zoom on a
+							one-to-one basis.
+						</p>
+
 						<p>Currently I live
 							in
 							<em>Reading,
@@ -96,8 +106,6 @@
 							<li>Lessons from Novice to Advanced.</li>
 							<li>All ages welcome.</li>
 							<li>Lessons tailored to your requirements.</li>
-							<li>Learn <strong>Kanji, Hiragana</strong> or <strong>Katakana</strong></li>
-							<li>Japaenese for busy people is also catered for.</li>
 							<li>Learn at your own pace.</li>
 						</ul>
 
@@ -106,14 +114,6 @@
 								for
 								Busy
 								People.</em>
-						</p>
-						<p>
-							For those who wish to learn Japanese within a short period of time then more than one lesson
-							a
-							week may be necessary. Such cases may arise when one needs to go abroad on a work related
-							trip
-							or on
-							holiday.
 						</p>
 
 						<span class="clearfix">
