--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							Tutor. The list below should help you judge what suits you best.
 						</p>
 						<ul>
-							<li>Lessons from Novice to Advanced.</li>
+							<li>Lessons from beginner to Advanced.</li>
 							<li>All ages welcome.</li>
 							<li>Lessons tailored to your requirements.</li>
 							<li>Learn at your own pace.</li>
