--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Learn Japanese at your own pace. I teach basic and advanced Japanese lessons.">
+	<meta name="description" content="Learn Japanese at your own pace. I teach basic and Advanced Japanese Lessons.">
 	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 
 	<!-- Bootstrap core CSS -->
@@ -14,7 +14,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 
-	<title>Home | Learn Japanese Online | Reading, UK</title>
+	<title>Home | Learn Japanese | Online | Reading | UK</title>
 </head>
 
 <body>
