--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,13 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Learn Japanese at your own pace. I teach basic and Advanced Japanese Lessons.">
 	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/site.css">
-	<title>Contact | Learn Japanese Online | Reading, UK</title>
+	<title>Contact | Learn Japanese | Online | Reading | UK</title>
 </head>
 
 <body>
