--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Learn Japanese at your own pace. I teach basic and Advanced Japanese Lessons.">
+	<meta name="description"
+		content="Learn Japanese at your own pace. I teach basic and Advanced Japanese Lessons online.">
+	<meta name="robots" content="index,follow">
 	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="css/site.css">
+	<link rel="canonical" href="https://japaneselessons4u.com">
 
 	<title>Home | Learn Japanese | Online | Reading | UK</title>
 </head>
