--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="css/site.css">
-	<link rel="canonical" href="https://japaneselessons4u.com/about.html">
+	<!-- <link rel="canonical" href="https://japaneselessons4u.com/about.html"> -->
 
 	<title>About | Learn Japanese | Online | Reading | UK</title>
 </head>
