--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 	<title>Contact | Learn Japanese | Online | Reading | UK</title>
-	<link rel="canonical" href="https://japaneselessons4u.com/contact.html">
+	<!-- <link rel="canonical" href="https://japaneselessons4u.com/contact.html"> -->
 </head>
 
 <body>
